@@ -1,3 +1,9 @@
+2003-09-30  Carl Worth  <cworth@east.isi.edu>
+
+	* src/cairo_surface.c (cairo_surface_destroy):
+	(cairo_surface_create_similar_solid): Fix to delay XFreePixmap
+	until cairo_surface_destroy.
+
 2003-09-29  Carl Worth  <cworth@east.isi.edu>
 
 	* TODO: Remove arc notes since arcs are done.
